<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/unsubscribe_push_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe_title"
            android:layout_weight="1"
            android:clickable="true">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/add_to_push_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:layout_weight="1"
            android:clickable="true">
        </Button>

        <Button
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send_title"
            android:layout_weight="1"
            android:clickable="true">
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/push_receiver_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/push_receivers"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ListView
        android:id="@+id/push_receivers_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

    </ListView>

</LinearLayout>
