<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true">

	<TableLayout 
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center">

		<TableRow android:visibility="gone">
			<TextView
				android:layout_width="wrap_content"
				android:text="@string/username_label"
				android:textColor="@color/text_field_color"
				android:layout_marginLeft="@dimen/main_margin"
				android:gravity="center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium">
			</TextView>
			 
			<EditText
				android:id="@+id/username_field"
				android:layout_width="0dp"
	    		android:layout_weight="1"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:inputType="text"
				android:singleLine="true" 
				android:hint="@string/enter_username"
	    		android:textColorHint="@color/hint_color"
				android:textAppearance="?android:attr/textAppearanceMedium" >
			    <requestFocus />
			</EditText>
		  
		</TableRow>
		<TableRow
            android:visibility="gone">

			<TextView
				android:layout_width="wrap_content"
				android:text="@string/display_name_label"
				android:textColor="@color/text_field_color"
				android:layout_marginLeft="@dimen/main_margin"
				android:gravity="center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium">
			</TextView>

			<EditText
				android:id="@+id/displayname_field"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:inputType="text"
				android:singleLine="true"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:hint="@string/enter_display_name"
				android:textColorHint="@color/hint_color"
				android:textAppearance="?android:attr/textAppearanceMedium" >

			</EditText>

		</TableRow>
		<TableRow 
		    android:layout_marginTop="@dimen/main_margin"
            android:visibility="visible"
		    android:gravity="center">
			<Button
				android:id="@+id/login_button"
				android:layout_width="fill_parent"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:visibility="gone"
				android:text="@string/start"
				android:layout_weight="1"
				android:clickable="true" />
		</TableRow>
		<TableRow  
			android:paddingTop="@dimen/main_padding"
	        android:gravity="center">               
			<TextView
				android:id="@+id/error_label"
				android:layout_width="0dp"
	    		android:layout_weight="1"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:textColor="@color/red_dark_color"
				android:textAppearance="?android:attr/textAppearanceMedium" >
			</TextView>          
		</TableRow>
	      
	</TableLayout>
	
</ScrollView> 
