<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_marginTop="@dimen/main_margin"
            android:gravity="center">
            <CheckBox
                android:id="@+id/use_custom_render"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/use_custom_render" />
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/main_margin"
            android:gravity="center">
            <Button
                android:id="@+id/room_button"
                android:layout_width="fill_parent"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:visibility="gone"
                android:text="@string/room_title"
                android:layout_weight="1"
                android:clickable="true">
            </Button>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/main_margin"
            android:visibility="gone"
            android:gravity="center">
            <Button
                android:id="@+id/make_call_button"
                android:layout_width="fill_parent"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:text="@string/make_call_title"
                android:layout_weight="1"
                android:clickable="true">
            </Button>
        </TableRow>
        <TableRow
            android:layout_marginTop="@dimen/main_margin"
            android:visibility="gone"
            android:gravity="center">
            <Button
                android:id="@+id/push_notification_button"
                android:layout_width="fill_parent"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:text="@string/push_title"
                android:layout_weight="1"
                android:clickable="true">
            </Button>
        </TableRow>

    </TableLayout>

</LinearLayout>
