<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/sixteen_16dp"
    android:paddingRight="@dimen/sixteen_16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical"
    android:background="@mipmap/page_back"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logo"/>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/forty_40dp"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/sixteen_16dp"
            android:paddingRight="@dimen/sixteen_16dp"
            android:paddingTop="@dimen/twenty_20dp"
            android:paddingBottom="@dimen/twenty_20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/forty_eight_48dp"
                android:paddingLeft="@dimen/twelve_12dp"
                android:paddingRight="@dimen/twelve_12dp"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/password"
                android:layout_marginTop="@dimen/twenty_20dp"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingLeft="@dimen/twelve_12dp"
                android:paddingRight="@dimen/twelve_12dp"
                android:layout_marginTop="@dimen/eight_8dp"
                android:layout_below="@+id/email"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/twelve_12dp"
                android:paddingBottom="@dimen/twelve_12dp"
                android:textColor="@color/send_dark_color"
                android:background="@drawable/grey_button"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_marginTop="16dp"
                android:text="@string/sign_in"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgot_password"
                android:layout_below="@+id/email_sign_in_button"
                android:layout_marginTop="@dimen/twelve_12dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/forgot_password"/>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
