<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fillViewport="true" >

	<TableLayout
	 	android:paddingTop="@dimen/main_padding"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		
		<TableRow android:visibility="gone">
	                            
			<TextView
				android:layout_width="wrap_content"
				android:text="@string/conference_id_label"
				android:textColor="@color/text_field_color"
				android:layout_marginLeft="@dimen/main_margin"
				android:gravity="center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium">
			</TextView>
			
			<EditText
				android:id="@+id/session_field"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:inputType="text"
				android:singleLine="true" 
				android:layout_width="0dp"
    			android:layout_weight="1"
    			android:hint="@string/enter_session_id"
    			android:textColorHint="@color/hint_color"
				android:textAppearance="?android:attr/textAppearanceMedium" >
			    <requestFocus />
			</EditText>
		  
		</TableRow>
		<TableRow 
		    android:layout_marginTop="@dimen/main_margin"
		    android:gravity="center">
			<Button
				android:id="@+id/join_button"
				android:layout_width="fill_parent"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:visibility="gone"
				android:text="@string/join_title"
				android:layout_weight="1"
				android:clickable="true">
			</Button>
		</TableRow>
	                
	</TableLayout>

	<com.exolvetechnologies.hidoctor.ui.VideoPanelPreviewRect
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:id="@+id/preview_rect"
	    android:fillViewport="true" >
		<FrameLayout
			android:layout_centerInParent="true"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="@dimen/main_margin"
		    android:orientation="vertical" >
			<com.oovoo.sdk.api.ui.VideoPanel
			    android:id="@+id/preview_view"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:isScrollContainer="false">
			</com.oovoo.sdk.api.ui.VideoPanel>
			<com.exolvetechnologies.hidoctor.ui.CustomVideoPanel
				android:id="@+id/custom_preview_view"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:isScrollContainer="false"
				custom:isCircleShape="true">
			</com.exolvetechnologies.hidoctor.ui.CustomVideoPanel>
			
			<TextView
				android:id="@+id/display_name_text_view"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top"
		        android:gravity="center"
		        android:text="@string/me"
		        android:textColor="@android:color/white"
		        android:background="@color/black_overlay"/>
		</FrameLayout>
	</com.exolvetechnologies.hidoctor.ui.VideoPanelPreviewRect>

</LinearLayout>
